# cottoncandy

./: .codecov.yml  .gitignore  .travis.yml  LICENSE  README.md  Setting up Google Drive.md  google_drive_setup_instructions.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.cfg
.github/workflows/: codespell.yml  deploy_pypi.yml  run_tests.yml
cottoncandy/: CCBackEnd.py  Encryption.py  GDriveClient.py  ICottoncandyBackend.py  S3Client.py  __init__.py  appdirs.py  backend.py  browser.py  defaults.cfg  gdriveclient.py  interfaces.py  localclient.py  options.py  s3client.py  utils.py
cottoncandy/examples/: ccexample_allenbrainobservatory.ipynb  ccexample_openneuro.ipynb
cottoncandy/test/: test.py
cottoncandy/tests/: conftest.py  test_compression.py  test_localclient.py  test_roundtrip.py  test_roundtrip_big.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_images/: inheritance-30ac110a89fe78f36a783446fdecd56b1b043f4a.png.map  inheritance-4237fad482dc2be817ea26e444507dce63318c59.png.map  inheritance-9999d9106254960e5b0d606b2e2e047eba53bd26.png.map  inheritance-a96e02f5218ea359fe2436f61f6d235394f28b9f.png.map
docs/_sources/: index.rst.txt  index.txt
docs/api/: cottoncandy.Encryption.html  cottoncandy.appdirs.html  cottoncandy.backend.html  cottoncandy.browser.html  cottoncandy.gdriveclient.html  cottoncandy.html  cottoncandy.interfaces.html  cottoncandy.localclient.html  cottoncandy.options.html  index.html  (+2 more)
gendoc/: Makefile  remove_keys.py
paper/: codemeta.json  paper.bib  paper.md
(+19 files in other folders)
