[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cottoncandy"
dynamic = ["version"]
description = "sugar for S3"
readme = "README.md"
license = { text = "BSD-2-Clause" }
authors = [
    {name = "Anwar O. Nunez-Elizalde", email = "anwarnunez@gmail.com"},
]
dependencies = [
    "six>=1.11.0",
    "botocore",
    "boto3",
    "python-dateutil>=2.7.3",
    "PyDrive>=1.3.1",
    "numpy>=1.6.0",
    "cloudpickle>=0.2.2",
    "toolz>=0.7.4",
    "numcodecs>=0.5.5",
    "urllib3>=1.26", # newer urllib3 is required but unspecified by botocore
]
requires-python = ">=3.7"

[project.optional-dependencies]
extra = [
    "scipy>=0.9.0",
    "dask[array]",
]

[dependency-groups]
# For development
test = [
    "codecov",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    {include-group = "test"},
    {include-group = "docs"},
    "cottoncandy[extra]",
]

[project.urls]
Homepage = "http://gallantlab.github.io/cottoncandy/"
Repository = "https://github.com/gallantlab/cottoncandy"
Documentation = "http://gallantlab.github.io/cottoncandy/"
"Bug Tracker" = "https://github.com/gallantlab/cottoncandy/issues"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report xml:coverage.xml"

[tool.setuptools]
packages = ["cottoncandy"]
include-package-data = true

[tool.setuptools.package-data]
cottoncandy = ["defaults.cfg"]

[tool.setuptools.dynamic]
version = {attr = "cottoncandy.__version__"}
